styles fixed and some refactor in the movie item

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <head>
+        <section class="search">
             <form class="search-form">
                 <input class="search-input" type="text" placeholder="Search...">
                 <button class="search-button" type="submit"><i class="fa fa-search"></i></button>
             </form>
-        </head>
+        </section>
         
         <img class="loader" src="assets/loading.gif">
-        <section class="movies">
+        <section class="movies-grid">
 
         </section>
     </body>
