show loading when the data is not ready in the detail view

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="detail detail-overlay hidden">
             <div class="detail-modal">
                 <i class="fa fa-times close-button"></i>
-                <video id="player" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls ></video>
+                <video id="player" class="hidden" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls ></video>
                 <div class="metadata">
                     <h2 class="title">Titulo</h2>
                     <div class="description">Descripcion bla bla bla</div>
