--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Vanilla Test</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script type="module" src="js/main.js" async defer></script>
+        <script type="module" src="js/app.js" async defer></script>
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
