remove unnecessary arrow functions and some style changes.

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
         <section class="detail detail-overlay hidden">
                 <div class="detail-modal">
                     <i class="fa fa-times close-button"></i>
-                    <video id="player" class="hidden" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls ></video>
+                    <video class="player hidden" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls ></video>
                     <div class="metadata">
                         <h2 class="title"></h2>
+                        <h4 class="extra-info"></h4>
                         <div class="description"></div>
                     </div>
                 </div>
