--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </section>
 
-    <img class="loader hidden" src="assets/loading.gif">
+    <div class="loader hidden"><i class="fa fa-spinner"></i></div>
 </body>
 
 </html>
